--- a/style.css
+++ b/style.css
@@ -169,6 +169,10 @@ section {
     height: 80vh;
 }
 
+#profile_pic {
+    border-radius: 50%;
+}
+
 .section_pic-container {
     display: flex;
     height: 400px;
@@ -374,6 +378,13 @@ article .icon {
 .project-btn {
     color: black;
     border-color: rgb(163, 163, 163);
+}
+
+#project_1_pic, 
+#project_2_pic,
+#project_3_pic {
+    height: 300px;
+    width: 300px;
 }
 
 /* CONTACT */
