--- a/style.css
+++ b/style.css
@@ -380,6 +380,8 @@ article .icon {
     border-color: rgb(163, 163, 163);
 }
 
+/* thought I fixed this too */
+
 #project_1_pic, 
 #project_2_pic,
 #project_3_pic {
