--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,10 +1,19 @@
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 2000px) and (min-width: 1200px){
     #profile {
         height: 83vh;
         margin-bottom: 6rem;
     }
     .about-containers {
         flex-wrap: wrap;
+    }
+
+    section, .section-container {
+        height: fit-content;
+        margin-bottom: 12rem;
+    }
+
+    #contact {
+        margin: 0;
     }
 }
 
