--- a/style.css
+++ b/style.css
@@ -54,10 +54,10 @@ a {
 }
 
 a:hover {
-    color: grey;
+    color: rgb(115, 176, 251);
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(181, 181, 181);
+    text-decoration-color: rgb(115, 176, 251);
 }
 
 .logo {
@@ -196,7 +196,7 @@ section {
 
 .section_text_p1 {
     text-align: center;
- 
+    color: rgb(55, 67, 86);
 }
 
 .section_text_p2 {
@@ -328,7 +328,7 @@ section {
 }
 
 .experience-subtitle {
-    color: rgb(85, 85, 85);
+    color: rgb(115, 176, 251);
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
@@ -347,6 +347,7 @@ section {
     flex-direction: row;
     gap: 2.5rem;
     justify-content: space-around;
+    
 }
 
 article {
@@ -354,6 +355,7 @@ article {
     width: 10rem;
     justify-content: space-around;
     gap: 0.5rem;
+    
 }
 
 article .icon {
@@ -385,7 +387,7 @@ article .icon {
 .project-btn {
     color: black;
     border-color: rgb(163, 163, 163);
-    background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff);
+    background: linear-gradient(45deg, rgb(180, 151, 235), rgb(141, 218, 244), #0000ff);
     background-size: 200% 200%;
     animation: gradientAnimation 5s ease infinite;
 }
@@ -523,11 +525,33 @@ footer p {
 
 
 
-
-
 /* PROFILE */
 
 #profile_pic {
-    border: 7px solid black;
+    border: 5px solid black;
     border-radius: 50%;
 }
+
+/* BACKGROUND */
+/* body {
+    animation: colorAnimation 10s infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes colorAnimation {
+    0% {
+        background-color: lightblue;
+    }
+    25% {
+        background-color: pink;
+    }
+    50% {
+        background-color: plum;
+    }
+    75% {
+        background-color: lightgoldenrodyellow;
+    }
+    100% {
+        background-color: lightblue;
+    }
+} */
